--- a/index.html
+++ b/index.html
@@ -21,7 +21,15 @@
                 <img src="img/to-do.png" alt="">
                 <div class="item-inner">
                     <h3>To do list</h3>
-                    <p>Add / remove items. Light / Dark theme. Local Storage. Drag-n-drop. Filter items.</p>
+                    <p>Add and check items that are done. Filter and remove if needed.</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>Javascript</li>
+                        <li>Local Storage</li>
+                        <li>Responsive Layout</li>
+                        <li>Drag-n-drop</li>
+                        <li>Switch Themes</li>
+                    </ul>
                 </div>
             </a>
             <a href="LaslesVPN/html/LaslesVPN.html" target="_blank" class="item">
@@ -29,6 +37,12 @@
                 <div class="item-inner">
                     <h3>Lasles VPN</h3>
                     <p>Landing page.</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>Javascript</li>
+                        <li>CSS Animations</li>
+                        <li>Responsive Layout</li>
+                    </ul>
                 </div>
             </a>
             <a href="sunnyside-agency-landing-page-main/index.html" target="_blank" class="item">
@@ -36,6 +50,11 @@
                 <div class="item-inner">
                     <h3>Sunnyside Agency Landing Page</h3>
                     <p>Fully responsive mobile first development</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>CSS Animations</li>
+                        <li>Responsive Layout</li>
+                    </ul>
                 </div>
             </a>
             <a href="quote-generator/index.html" target="_blank"class="item">
@@ -43,6 +62,12 @@
                 <div class="item-inner">
                     <h3>Quote Generator</h3>
                     <p>Get a piece of wisdom with a one click.</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>Javascript</li>
+                        <li>API</li>
+                        <li>Responsive Layout</li>
+                    </ul>
                 </div>
             </a>
             <a href="infinite-scroll/index.html" target="_blank" class="item">
@@ -51,6 +76,12 @@
                     <h3>Infinite Scroll</h3>
                     <p>Scroll down to get new images from Unsplash.</p>
                 </div>
+                <ul class="tags">
+                    <li>HTML/CSS</li>
+                    <li>Javascript</li>
+                    <li>API</li>
+                    <li>Responsive Layout</li>
+                </ul>
             </a>
             <a href="music-player/index.html" target="_blank" class="item">
                 <img src="img/audioplayer.png" alt="">
@@ -58,12 +89,23 @@
                     <h3>Music Player</h3>
                     <p>Absolutely custom audio player.</p>
                 </div>
+                <ul class="tags">
+                    <li>HTML/CSS</li>
+                    <li>Javascript</li>
+                    <li>Audio Events</li>
+                </ul>
             </a>
             <a href="drag-and-drop/index.html" target="_blank" class="item">
                 <img src="img/kanban.png" alt="">
                 <div class="item-inner">
                     <h3>Kanban Board</h3>
                     <p>Simplefied though still quite effective kanban board.</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>Javascript</li>
+                        <li>Drag-n-drop</li>
+                        <li>Local Storage</li>
+                    </ul>
                 </div>
             </a>
             <a href="nasa-api-pictures/index.html" target="_blank" class="item">
@@ -71,6 +113,13 @@
                 <div class="item-inner">
                     <h3>NASA Articles</h3>
                     <p>Get the coolest images from NASA website.</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>Javascript</li>
+                        <li>API</li>
+                        <li>Local Storage</li>
+                        <li>Responsive Layout</li>
+                    </ul>
                 </div>
             </a>
             <a href="calculator/index.html" target="_blank" class="item">
@@ -78,6 +127,11 @@
                 <div class="item-inner">
                     <h3>Calculator</h3>
                     <p>Ґрунт, База, так би мовити — Основа, Стрижень, Наріжний камінь і Фундамент, Твердиня, Осердя, Підвалина, Моноліт, Літосферна плита, Серцевина, Опора.</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>Javascript</li>
+                        <li>Responsive Layout</li>
+                    </ul>
                 </div>
             </a>
             <a href="css-animations/buttons.html" target="_blank" class="item">
@@ -85,6 +139,11 @@
                 <div class="item-inner">
                     <h3>Buttons CSS Animations</h3>
                     <p>Hover over any button to see some magic.</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>CSS Animations</li>
+                        <li>Responsive Layout</li>
+                    </ul>
                 </div>
             </a>
             <a  href="joke-teller/index.html" target="_blank" class="item">
@@ -92,6 +151,12 @@
                 <div class="item-inner">
                     <h3>Joke Teller</h3>
                     <p>Random joke from a cute robot.</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>Javascript</li>
+                        <li>API</li>
+                        <li>Responsive Layout</li>
+                    </ul>
                 </div>
             </a>
             <a href="video-player/index.html" target="_blank" class="item">
@@ -99,6 +164,12 @@
                 <div class="item-inner">
                     <h3>Custom Video Player</h3>
                     <p>Absolutely custom video player.</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>Javascript</li>
+                        <li>Video Events</li>
+                        <li>Volume Events</li>
+                    </ul>
                 </div>
             </a>
             <a href="spock-rock-game/index.html" target="_blank" class="item">
@@ -106,6 +177,11 @@
                 <div class="item-inner">
                     <h3>Spock-Rock Game</h3>
                     <p>Play Rock, Paper, Scissors, Lizard, Spock if you dare.</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>Javascript</li>
+                        <li>Responsive Layout</li>
+                    </ul>
                 </div>
             </a>
             <a href="picture-in-picture/index.html" target="_blank" class="item">
@@ -113,6 +189,11 @@
                 <div class="item-inner">
                     <h3>Picture in Picture</h3>
                     <p>You can make a picture-in-picture preview from your tab.</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>Javascript</li>
+                        <li>API</li>
+                    </ul>
                 </div>
             </a>
             <!-- <a href="light-dark-mode/index.html" target="_blank" class="item">
@@ -134,6 +215,10 @@
                 <div class="item-inner">
                     <h3>Animated Navigation</h3>
                     <p>Cool navigation appearance.</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>Javascript Animations</li>
+                    </ul>
                 </div>
             </a>
             <a href="custom-countdown/index.html" target="_blank" class="item">
@@ -141,6 +226,12 @@
                 <div class="item-inner">
                     <h3>Custom Countdown</h3>
                     <p>Create a countdwon to any event you want. Works even if the page was closed.</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>Javascript</li>
+                        <li>Local Storage</li>
+                        <li>Responsive Layout</li>
+                    </ul>
                 </div>
             </a>
             <a href="book-keeper/" target="_blank" class="item">
@@ -148,6 +239,11 @@
                 <div class="item-inner">
                     <h3>Bookmarks keeper</h3>
                     <p>Add quick links to your favourite websites.</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>Javascript</li>
+                        <li>Local Storage</li>
+                    </ul>
                 </div>
             </a>
             <a href="form-validation/index.html" target="_blank" class="item">
@@ -155,6 +251,10 @@
                 <div class="item-inner">
                     <h3>Form Validation</h3>
                     <p>All inputs are under control.</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>HTML Form Validation</li>
+                    </ul>
                 </div>
             </a>
             <a href="Trafalgar/index.html" target="_blank" class="item">
@@ -162,6 +262,9 @@
                 <div class="item-inner">
                     <h3>Trafalgar Landing Page</h3>
                     <p>Landing page.</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                    </ul>
                 </div>
             </a>
             <a href="css-animations/images.html" target="_blank" class="item">
@@ -169,6 +272,10 @@
                 <div class="item-inner">
                     <h3>Images CSS Animations</h3>
                     <p>Try to reach the image with a mouse.</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>CSS Animations</li>
+                    </ul>
                 </div>
             </a>
             <a href="qr-code-component-main/index.html" target="_blank" class="item">
@@ -176,6 +283,9 @@
                 <div class="item-inner">
                     <h3>QR code</h3>
                     <p>Try to reach the image with a mouse.</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                    </ul>
                 </div>
             </a>
 
