updated portfolio page

--- a/index.html
+++ b/index.html
@@ -17,8 +17,22 @@
             <p>Also, you may be interested in my <span><a target="_blank" href="https://olha-leskiv.github.io/design-portfolio/">Design portfolio</a></span></p>
         </div>
         <div class="items-container">
+            <a href="bookmark-landing-page-master/index.html" target="_blank" class="item">
+                <img src="img/bookmark-lp.png" alt="Bookmark Landing Page">
+                <div class="item-inner">
+                    <h3>Bookmark Landing Page</h3>
+                    <p>Clean landing page with a subscription section</p>
+                    <ul class="tags">
+                        <li>SASS/SCSS</li>
+                        <li>Input Validation</li>
+                        <li>HTML/CSS</li>
+                        <li>Javascript</li>
+                        <li>Responsive Layout</li>
+                    </ul>
+                </div>
+            </a>
             <a href="todo-app-main/index.html" target="_blank" class="item">
-                <img src="img/to-do.png" alt="">
+                <img src="img/to-do.png" alt="To do list">
                 <div class="item-inner">
                     <h3>To do list</h3>
                     <p>Add and check items that are done. Filter and remove if needed.</p>
@@ -33,7 +47,7 @@
                 </div>
             </a>
             <a href="LaslesVPN/html/LaslesVPN.html" target="_blank" class="item">
-                <img src="img/lasles.png" alt="">
+                <img src="img/lasles.png" alt="Lasles VPN">
                 <div class="item-inner">
                     <h3>Lasles VPN</h3>
                     <p>Landing page.</p>
@@ -46,7 +60,7 @@
                 </div>
             </a>
             <a href="sunnyside-agency-landing-page-main/index.html" target="_blank" class="item">
-                <img src="img/sunnyside.png" alt="">
+                <img src="img/sunnyside.png" alt="Sunnyside Agency Landing Page">
                 <div class="item-inner">
                     <h3>Sunnyside Agency Landing Page</h3>
                     <p>Fully responsive mobile first development</p>
@@ -58,7 +72,7 @@
                 </div>
             </a>
             <a href="quote-generator/index.html" target="_blank"class="item">
-                <img src="img/quote.png" alt="">
+                <img src="img/quote.png" alt="Quote Generator">
                 <div class="item-inner">
                     <h3>Quote Generator</h3>
                     <p>Get a piece of wisdom with a one click.</p>
@@ -71,7 +85,7 @@
                 </div>
             </a>
             <a href="infinite-scroll/index.html" target="_blank" class="item">
-                <img src="img/scroll.png" alt="">
+                <img src="img/scroll.png" alt="Infinite Scroll">
                 <div class="item-inner">
                     <h3>Infinite Scroll</h3>
                     <p>Scroll down to get new images from Unsplash.</p>
@@ -84,7 +98,7 @@
                 </ul>
             </a>
             <a href="music-player/index.html" target="_blank" class="item">
-                <img src="img/audioplayer.png" alt="">
+                <img src="img/audioplayer.png" alt="Music Player">
                 <div class="item-inner">
                     <h3>Music Player</h3>
                     <p>Absolutely custom audio player.</p>
@@ -96,7 +110,7 @@
                 </ul>
             </a>
             <a href="drag-and-drop/index.html" target="_blank" class="item">
-                <img src="img/kanban.png" alt="">
+                <img src="img/kanban.png" alt="Kanban Board">
                 <div class="item-inner">
                     <h3>Kanban Board</h3>
                     <p>Simplefied though still quite effective kanban board.</p>
@@ -109,7 +123,7 @@
                 </div>
             </a>
             <a href="nasa-api-pictures/index.html" target="_blank" class="item">
-                <img src="img/nasa.png" alt="">
+                <img src="img/nasa.png" alt="NASA Articles">
                 <div class="item-inner">
                     <h3>NASA Articles</h3>
                     <p>Get the coolest images from NASA website.</p>
@@ -123,7 +137,7 @@
                 </div>
             </a>
             <a href="calculator/index.html" target="_blank" class="item">
-                <img src="img/calculator.png" alt="">
+                <img src="img/calculator.png" alt="Calculator">
                 <div class="item-inner">
                     <h3>Calculator</h3>
                     <p>Ґрунт, База, так би мовити — Основа, Стрижень, Наріжний камінь і Фундамент, Твердиня, Осердя, Підвалина, Моноліт, Літосферна плита, Серцевина, Опора.</p>
@@ -135,7 +149,7 @@
                 </div>
             </a>
             <a href="css-animations/buttons.html" target="_blank" class="item">
-                <img src="img/buttons.png" alt="">
+                <img src="img/buttons.png" alt="Buttons CSS Animations">
                 <div class="item-inner">
                     <h3>Buttons CSS Animations</h3>
                     <p>Hover over any button to see some magic.</p>
@@ -147,7 +161,7 @@
                 </div>
             </a>
             <a  href="joke-teller/index.html" target="_blank" class="item">
-                <img src="img/joke.png" alt="">
+                <img src="img/joke.png" alt="Joke Teller">
                 <div class="item-inner">
                     <h3>Joke Teller</h3>
                     <p>Random joke from a cute robot.</p>
@@ -160,7 +174,7 @@
                 </div>
             </a>
             <a href="video-player/index.html" target="_blank" class="item">
-                <img src="img/video-player.png" alt="">
+                <img src="img/video-player.png" alt="Custom Video Player">
                 <div class="item-inner">
                     <h3>Custom Video Player</h3>
                     <p>Absolutely custom video player.</p>
@@ -173,7 +187,7 @@
                 </div>
             </a>
             <a href="spock-rock-game/index.html" target="_blank" class="item">
-                <img src="img/rock-spock.png" alt="">
+                <img src="img/rock-spock.png" alt="Spock-Rock Game">
                 <div class="item-inner">
                     <h3>Spock-Rock Game</h3>
                     <p>Play Rock, Paper, Scissors, Lizard, Spock if you dare.</p>
@@ -185,7 +199,7 @@
                 </div>
             </a>
             <a href="picture-in-picture/index.html" target="_blank" class="item">
-                <img src="img/picture.png" alt="">
+                <img src="img/picture.png" alt="Picture in Picture">
                 <div class="item-inner">
                     <h3>Picture in Picture</h3>
                     <p>You can make a picture-in-picture preview from your tab.</p>
@@ -211,7 +225,7 @@
                 </div>
             </a> -->
             <a href="animated-navigation/index.html" target="_blank" class="item">
-                <img src="img/navigation.png" alt="">
+                <img src="img/navigation.png" alt="Animated Navigation">
                 <div class="item-inner">
                     <h3>Animated Navigation</h3>
                     <p>Cool navigation appearance.</p>
@@ -222,7 +236,7 @@
                 </div>
             </a>
             <a href="custom-countdown/index.html" target="_blank" class="item">
-                <img src="img/countdown.png" alt="">
+                <img src="img/countdown.png" alt=">Custom Countdown">
                 <div class="item-inner">
                     <h3>Custom Countdown</h3>
                     <p>Create a countdwon to any event you want. Works even if the page was closed.</p>
@@ -235,7 +249,7 @@
                 </div>
             </a>
             <a href="book-keeper/" target="_blank" class="item">
-                <img src="img/bookmarks.png" alt="">
+                <img src="img/bookmarks.png" alt="Bookmarks keeper">
                 <div class="item-inner">
                     <h3>Bookmarks keeper</h3>
                     <p>Add quick links to your favourite websites.</p>
@@ -247,7 +261,7 @@
                 </div>
             </a>
             <a href="form-validation/index.html" target="_blank" class="item">
-                <img src="img/form-validation.png" alt="">
+                <img src="img/form-validation.png" alt="Form Validation">
                 <div class="item-inner">
                     <h3>Form Validation</h3>
                     <p>All inputs are under control.</p>
@@ -258,7 +272,7 @@
                 </div>
             </a>
             <a href="Trafalgar/index.html" target="_blank" class="item">
-                <img src="img/trafalgar.png" alt="">
+                <img src="img/trafalgar.png" alt="Trafalgar Landing Page">
                 <div class="item-inner">
                     <h3>Trafalgar Landing Page</h3>
                     <p>Landing page.</p>
@@ -268,7 +282,7 @@
                 </div>
             </a>
             <a href="css-animations/images.html" target="_blank" class="item">
-                <img src="img/images.png" alt="">
+                <img src="img/images.png" alt="Images CSS Animations">
                 <div class="item-inner">
                     <h3>Images CSS Animations</h3>
                     <p>Try to reach the image with a mouse.</p>
@@ -279,7 +293,7 @@
                 </div>
             </a>
             <a href="qr-code-component-main/index.html" target="_blank" class="item">
-                <img src="img/qr.png" alt="">
+                <img src="img/qr.png" alt="QR code">
                 <div class="item-inner">
                     <h3>QR code</h3>
                     <p>Try to reach the image with a mouse.</p>
