added logic for vertical and horizontal win

--- a/connect-four-game/pages/game.html
+++ b/connect-four-game/pages/game.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link rel="stylesheet" href="../css/game.css">
   <title>Connect Four game</title>
@@ -54,8 +54,6 @@
     <div class="game-container">
       <div class="game-box">
         <ul>
-          <div class="marker"></div>
-
           <li class="counter yellow win"></li>
           <li class="counter red"></li>
           <li class="counter red"></li>
@@ -63,7 +61,7 @@
           <li class="counter red"></li>
           <li class="counter yellow counter-active"></li>
         </ul>
-        <ul class="marker"></ul>
+        <ul></ul>
         <ul></ul>
         <ul></ul>
         <ul></ul>
