finished main functional

--- a/connect-four-game/index.html
+++ b/connect-four-game/index.html
@@ -15,7 +15,7 @@
     <img class="logo" src="assets/images/logo.svg" alt="Logo">
     <div class="buttons">
       <a href="pages/game.html" class="button primary">PLAY VS PLAYER <img src="assets/images/player-vs-player.svg" alt="Player-vs-player icon"></a>
-      <a href="" class="button secondary">GAME RULES</a>
+      <a href="pages/rules.html" class="button secondary">GAME RULES</a>
     </div>
   </div>
 
