--- a/connect-four-game/pages/game.html
+++ b/connect-four-game/pages/game.html
@@ -15,7 +15,7 @@
       <div class="buttons">
         <button class="button secondary continueBtn">CONTINUE GAME</button>
         <button class="button secondary restartBtn">RESTART</button>
-        <a href="../index.html" class="button red">QUIT GAME</a>
+        <a href="../index.html" class="button secondary red">QUIT GAME</a>
       </div>
     </div>
   </section>
@@ -59,7 +59,7 @@
   
   <aside class="player-2">
     <img src="../assets/images/player-two.svg" alt="Player One">
-    <h3>PLAYER 2</h3>
+    <h3>PLAYER</h3>
     <h1>0</h1>
   </aside>
 
