--- a/index.html
+++ b/index.html
@@ -20,6 +20,21 @@
             <a href="bookmark-landing-page-master/index.html" target="_blank" class="item">
                 <img src="img/bookmark-lp.png" alt="Bookmark Landing Page">
                 <div class="item-inner">
+                    <h3>Connect Four Game</h3>
+                    <p>Be the first player to connect 4 of the same colored discs in a row (either vertically, horizontally, or diagonally).</p>
+                    <ul class="tags">
+                        <li>SASS/SCSS</li>
+                        <li>jQuery</li>
+                        <li>HTML/CSS</li>
+                        <li>Javascript</li>
+                        <li>Responsive Layout</li>
+                        <li>Local Storage</li>
+                    </ul>
+                </div>
+            </a>
+            <a href="bookmark-landing-page-master/index.html" target="_blank" class="item">
+                <img src="img/bookmark-lp.png" alt="Bookmark Landing Page">
+                <div class="item-inner">
                     <h3>Bookmark Landing Page</h3>
                     <p>Clean landing page with a subscription section</p>
                     <ul class="tags">
