--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             <p>Also, you may be interested in my <span><a target="_blank" href="https://olha-leskiv.github.io/design-portfolio/">Design portfolio</a></span></p>
         </div>
         <div class="items-container">
-            <a href="bookmark-landing-page-master/index.html" target="_blank" class="item">
-                <img src="img/bookmark-lp.png" alt="Bookmark Landing Page">
+            <a href="connect-four-game/index.html" target="_blank" class="item">
+                <img src="img/connect-four.png" alt="Connect Four Game">
                 <div class="item-inner">
                     <h3>Connect Four Game</h3>
                     <p>Be the first player to connect 4 of the same colored discs in a row (either vertically, horizontally, or diagonally).</p>
@@ -29,6 +29,8 @@
                         <li>Javascript</li>
                         <li>Responsive Layout</li>
                         <li>Local Storage</li>
+                        <li>Timer</li>
+                        <li>Play With CPU</li>
                     </ul>
                 </div>
             </a>
