--- a/connect-four-game/pages/game.html
+++ b/connect-four-game/pages/game.html
@@ -44,7 +44,7 @@
         <ul></ul>
         <ul></ul>
       </div>
-      <div class="white-board"><img src="../assets/images/board-layer-white-large.svg" alt=""></div>
+      <div class="white-board"></div>
     </div>
     <div class="turn">
       <h4>PLAYER 1’S TURN</h4>
@@ -59,7 +59,7 @@
   
   <aside class="player-2">
     <img src="../assets/images/player-two.svg" alt="Player One">
-    <h3>PLAYER</h3>
+    <h3>PLAYER 2</h3>
     <h1>0</h1>
   </aside>
 
