--- a/connect-four-game/index.html
+++ b/connect-four-game/index.html
@@ -11,7 +11,7 @@
 <body>
 
   <!-- Main menu start -->
-  <div class="menu-container">
+  <div class="menu-container mainscreen">
     <img class="logo" src="assets/images/logo.svg" alt="Logo">
     <div class="buttons">
       <a 
