--- a/test/index.html
+++ b/test/index.html
@@ -8,8 +8,9 @@
     <title>Playground</title>
 </head>
 <body>
-    <button class="pacman-btn">Click me</button>
-
+    <div>
+        <img src="assets/michal-parzuchowski-oT-XbATcoTQ-unsplash.jpg" alt="">
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
