--- a/index.html
+++ b/index.html
@@ -17,6 +17,23 @@
             <p>Also, you may be interested in my <span><a target="_blank" href="https://olha-leskiv.github.io/design-portfolio/">Design portfolio</a></span></p>
         </div>
         <div class="items-container">
+            <a href="tip-calculator-app-main/tip-calculator-react/build/index.html" target="_blank" class="item">
+                <img src="img/connect-four.png" alt="Connect Four Game">
+                <div class="item-inner">
+                    <h3>Tip calculator</h3>
+                    <p>Be the first player to connect 4 of the same colored discs in a row (either vertically, horizontally, or diagonally).</p>
+                    <ul class="tags">
+                        <li>SASS/SCSS</li>
+                        <li>jQuery</li>
+                        <li>HTML/CSS</li>
+                        <li>Javascript</li>
+                        <li>Responsive Layout</li>
+                        <li>Local Storage</li>
+                        <li>Timer</li>
+                        <li>Play With CPU</li>
+                    </ul>
+                </div>
+            </a>
             <a href="connect-four-game/index.html" target="_blank" class="item">
                 <img src="img/connect-four.png" alt="Connect Four Game">
                 <div class="item-inner">
