multi step form

--- a/index.html
+++ b/index.html
@@ -17,6 +17,21 @@
             <p>Also, you may be interested in my <span><a target="_blank" href="https://olha-leskiv.github.io/design-portfolio/">Design portfolio</a></span></p>
         </div>
         <div class="items-container">
+            <a href="https://olha-leskiv.github.io/multi-step-form/" target="_blank" class="item">
+                <img src="img/multi-step-form.png" alt="Multi-Step Subscription Form">
+                <div class="item-inner">
+                    <h3>Multi-Step Subscription Form</h3>
+                    <p>Tip calculator app</p>
+                    <ul class="tags">
+                        <li>HTML/CSS</li>
+                        <li>SASS/SCSS</li>
+                        <li>Javascript</li>
+                        <li>React</li>
+                        <li>RegEx</li>
+                        <li>Responsive Layout</li>
+                    </ul>
+                </div>
+            </a>
             <a href="https://olha-leskiv.github.io/react-projects/" target="_blank" class="item">
                 <img src="img/splitter.png" alt="Tip calculator">
                 <div class="item-inner">
